2012-01-16  Mario Sanchez Prada  <msanchez@igalia.com>

        [GTK] Include gtk+3 in the jhbuild modules
        https://bugs.webkit.org/show_bug.cgi?id=76284

        Reviewed by Philippe Normand.

        * gtk/jhbuild.modules: Add some gtk+3 to the jhbuild moduleset.

2012-01-16  Dan Winship  <danw@gnome.org>

        Add myself as a committer

        Unreviewed

        * Scripts/webkitpy/common/config/committers.py:

2012-01-16  Raphael Kubo da Costa  <kubo@profusion.mobi>

        Unreviewed; fix the build when --as-needed and --no-copy-dt-needed-entries are passed to the linker.

        Some recent versions of a few Linux distributions have started passing
        --as-needed and --no-copy-dt-needed-entries by default to the linker,
        which broke the build when SHARED_CORE was turned on, as libwtf_efl.so
        needed a few symbols from libjavascriptcore_efl.so.

        * DumpRenderTree/efl/CMakeLists.txt: Explicitly pass WTF_LIBRARY_NAME
        before JavaScriptCore_LIBRARY_NAME in DumpRenderTree_LIBRARIES so the
        libraries are searched in the right order by the linker.

2012-01-16  Philippe Normand  <pnormand@igalia.com>

        [GTK] set audio resources path in NRTW
        https://bugs.webkit.org/show_bug.cgi?id=76380

        Reviewed by Martin Robinson.

        * Scripts/webkitpy/layout_tests/port/gtk.py:
        (GtkPort.setup_environ_for_server): Set $AUDIO_RESOURCES_PATH so
        the uninstalled audio resources are used during webaudio tests.

2012-01-16  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] ldflags and cflags should take precedence over the existing flags in gtkdoc.py
        https://bugs.webkit.org/show_bug.cgi?id=76369

        Reviewed by Xan Lopez.

        If there's an installed version of webkit and there are new
        symbols in the build tree, gtkdoc-scanobj fails due to undefined
        references, because the env ldflags are given before the local
        ones.

        * gtk/gtkdoc.py: